...
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:backgroundTint="#FAF6F6"
        app:layout_anchor="@id/appBarLayout"
        android:layout_marginEnd="15dp"
...
